--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="include\gameObjects\Tile.h" />
     <ClInclude Include="include\gameObjects\Tower.h" />
     <ClInclude Include="include\gameObjects\TowerDecorator.h" />
+    <ClInclude Include="include\gameObjects\TowerGameObject.h" />
     <ClInclude Include="include\gameObjects\WhiteCat.h" />
     <ClInclude Include="include\gameStates\GameState.h" />
     <ClInclude Include="include\gameStates\GameStateGameOver.h" />
@@ -152,6 +153,7 @@
     <ClCompile Include="src\gameObjects\Tile.cpp" />
     <ClCompile Include="src\gameObjects\Tower.cpp" />
     <ClCompile Include="src\gameObjects\TowerDecorator.cpp" />
+    <ClCompile Include="src\gameObjects\TowerGameObject.cpp" />
     <ClCompile Include="src\gameObjects\WhiteCat.cpp" />
     <ClCompile Include="src\gameStates\GameStateGameOver.cpp" />
     <ClCompile Include="src\gameStates\GameStateGameWin.cpp" />
