--- a/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
+++ b/TowerDefense/TowerDefense/TowerDefense.vcxproj.filters
@@ -201,6 +201,9 @@
     <ClInclude Include="include\gameObjects\CritterGameObject.h">
       <Filter>Header Files\GameObjects</Filter>
     </ClInclude>
+    <ClInclude Include="include\gameObjects\TowerGameObject.h">
+      <Filter>Header Files\GameObjects</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Game.cpp">
@@ -324,6 +327,9 @@
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="src\gameObjects\CritterGameObject.cpp">
+      <Filter>Source Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="src\gameObjects\TowerGameObject.cpp">
       <Filter>Source Files\GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
